# Premier-League-Predictions

./: README.md  pyproject.toml  requirements.txt
data/processed/: matches_features.csv
data/raw/: future_odds.csv  matches_this_season.csv  odds_this_season.csv  players_this_season.csv
data/results/: future_odds_all_edges.csv  future_odds_recommended_bets.csv
models/: team_strength.pkl
scripts/: build_odds_file.py  build_pl_from_fplelo.py  evaluate_model_vs_market.py  fit_team_strength.py  make_features.py  predict_from_future_odds.py
src/epl_betting/: __init__.py  config.py  pyproject.toml
src/epl_betting/app/: dashboard.py
src/epl_betting/betting/: __init__.py  bayesian.py  odds_utils.py  stake_sizing.py
src/epl_betting/data/: __init__.py  features.py  load_matches.py  load_odds.py  load_players.py
src/epl_betting/evaluation/: backtest.py
src/epl_betting/models/: __init__.py  probability.py  simulate.py  team_strength.py
